--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Chessdesk</h1>
             <div class="checkboard__desk">
                 <div class="checkbord__letters checkbord__letters--upper">
-                    <span class="checkbord__letter">a</span>
+                    <span class="checkbord__letter">a3</span>
                     <span class="checkbord__letter">a</span>
                     <span class="checkbord__letter">b</span>
                     <span class="checkbord__letter">c</span>
